# swagger.json
@@ -11,8 +11,8 @@
     "https",
     "http"
   ],
-  "paths": {
-        "/customer/": {
+  "paths": {   
+    "/customer/": {
       "get": {
         "tags": [
           "Customers"
@@ -246,6 +246,9 @@
           "201": {
             "description": "Created"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -331,6 +334,9 @@
           "204": {
             "description": "No Content"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
@@ -355,6 +361,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -414,6 +423,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -488,6 +500,9 @@
           "204": {
             "description": "No Content"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
@@ -512,6 +527,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -552,16 +570,19 @@
             "schema": {
               "type": "object",
               "properties": {
-                "inv_name": {
+                "sup_name": {
                   "example": "any"
                 },
-                "inv_quantity": {
+                "sup_address": {
                   "example": "any"
                 },
-                "inv_price": {
+                "sup_phone": {
                   "example": "any"
                 },
-                "inv_description": {
+                "sup_notes": {
+                  "example": "any"
+                },
+                "inv_id": {
                   "example": "any"
                 }
               }
@@ -571,6 +592,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -625,16 +649,19 @@
             "schema": {
               "type": "object",
               "properties": {
-                "inv_name": {
+                "sup_name": {
                   "example": "any"
                 },
-                "inv_quantity": {
+                "sup_address": {
                   "example": "any"
                 },
-                "inv_price": {
+                "sup_phone": {
                   "example": "any"
                 },
-                "inv_description": {
+                "sup_notes": {
+                  "example": "any"
+                },
+                "inv_id": {
                   "example": "any"
                 }
               }
@@ -644,6 +671,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -669,6 +699,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
